Two players can now successfully get to a current round and see the grid.
