# ImposterGame/ImposterGame.App/Imposter/src/server/api/roundApi.service.ts
@@ -18,6 +18,7 @@ import { CustomHttpUrlEncodingCodec }                        from '../encoder';
 
 import { Observable }                                        from 'rxjs';
 
+import { AddAnswerModel } from '../model/addAnswerModel';
 import { IGame } from '../model/iGame';
 
 import { BASE_PATH, COLLECTION_FORMATS }                     from '../variables';
@@ -55,6 +56,54 @@ export class RoundApiService {
         return false;
     }
 
+
+    /**
+     * 
+     * 
+     * @param body 
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public apiRoundApiAddAnswerPost(body?: AddAnswerModel, observe?: 'body', reportProgress?: boolean): Observable<IGame>;
+    public apiRoundApiAddAnswerPost(body?: AddAnswerModel, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<IGame>>;
+    public apiRoundApiAddAnswerPost(body?: AddAnswerModel, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<IGame>>;
+    public apiRoundApiAddAnswerPost(body?: AddAnswerModel, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'text/plain',
+            'application/json',
+            'text/json'
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+            'application/json',
+            'text/json',
+            'application/_*+json'
+        ];
+        const httpContentTypeSelected: string | undefined = this.configuration.selectHeaderContentType(consumes);
+        if (httpContentTypeSelected != undefined) {
+            headers = headers.set('Content-Type', httpContentTypeSelected);
+        }
+
+        return this.httpClient.post<IGame>(`${this.basePath}/api/RoundApi/AddAnswer`,
+            body,
+            {
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
 
     /**
      * 
