# ImposterGame/ImposterGame.Website/Models/AddAnswerModel.cs
@@ -1,0 +1,13 @@
+﻿using System;
+
+namespace ImposterGame.Website.Models
+{
+    public class AddAnswerModel
+    {
+        public Guid GameId { get; set; }
+
+        public Guid PlayerId { get; set; }
+
+        public string Word { get; set; }
+    }
+}
